--- a/style.css
+++ b/style.css
@@ -23,3 +23,24 @@
     padding: 9px 25px;
     cursor: pointer;
 }
+.cat1, .cat2, .cat3{
+    padding: 10px 30px;
+}
+.cat1{
+    background-color: orange;
+    border-radius: 10px;
+    
+}
+.cat2{
+    background-color: purple;
+    border-radius: 10px;
+    
+}
+.cat3{
+    background-color: green;
+    border-radius: 10px;
+    
+}
+.catagory h1{
+    color: white;
+}
