--- a/style.css
+++ b/style.css
@@ -44,3 +44,13 @@
 .catagory h1{
     color: white;
 }
+.card{
+    border: none;
+    box-shadow: 5px 5px 10px lightgrey;
+}
+#contact-us{
+    height: 300px;
+}
+footer{
+    text-align: center;
+}
